--- a/SportsStore.UnitTests/packages.config
+++ b/SportsStore.UnitTests/packages.config
@@ -6,4 +6,5 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.2.1402.2112" targetFramework="net45" />
   <package id="Ninject" version="3.0.1.10" targetFramework="net45" />
+  <package id="NUnit" version="2.6.3" targetFramework="net45" />
 </packages>
