--- a/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ProductControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CartTests.cs" />
+    <Compile Include="RouteTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
