--- a/SportsStore.Domain/SportsStore.Domain.csproj
+++ b/SportsStore.Domain/SportsStore.Domain.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Concrete\EFProductRepository.cs" />
     <Compile Include="Concrete\EmailOrderProccessor.cs" />
     <Compile Include="Entities\Cart.cs" />
+    <Compile Include="Entities\DataTypes.cs" />
     <Compile Include="Entities\Product.cs" />
     <Compile Include="Entities\ShippingDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
