--- a/SportsStore.WebUI/Web.config
+++ b/SportsStore.WebUI/Web.config
@@ -13,10 +13,11 @@
 			<section name="uglify" type="BundleTransformer.UglifyJs.Configuration.UglifySettings, BundleTransformer.UglifyJs" />
 			<section name="yui" type="BundleTransformer.Yui.Configuration.YuiSettings, BundleTransformer.Yui" />
 		</sectionGroup>
-		
-	<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><sectionGroup name="jsEngineSwitcher">
+		<sectionGroup name="jsEngineSwitcher">
 			<section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
-		</sectionGroup></configSections>
+			<section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" />
+		</sectionGroup>
+	</configSections>
 	<connectionStrings>
 		<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-SportsStore.WebUI-20140223175142;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-SportsStore.WebUI-20140223175142.mdf" />
 		<add name="EFDbContext" providerName="System.Data.SqlClient" connectionString="Data Source=(localdb)\v11.0;Initial Catalog=SportsStore;Integrated Security=True" />
@@ -86,6 +87,7 @@
 			<add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
 			<add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
 		</handlers>
+
 		
 	<security>
 			<requestFiltering>
@@ -187,7 +189,6 @@
 		</uglify>
 	</bundleTransformer>
 	<jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
-		
 	<core>
 			<engines>
 				<add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" />
